--- a/CollegeMathBankProject/.project
+++ b/CollegeMathBankProject/.project
@@ -28,4 +28,11 @@
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.wst.jsdt.core.jsNature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>Images/OpenSourceMathAnswer.jpg</name>
+			<type>1</type>
+			<locationURI>PROJECT_LOC/Images/OpenSourceMathAnswer.jpg</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
